--- a/google_assistant.yaml
+++ b/google_assistant.yaml
@@ -7,6 +7,17 @@ access_token: !secret google_assistant_access_token
 #   - group
 expose_by_default: false
 entity_config:
+  script.wol_pc:
+    name: WOL PC
+    aliases:
+      - pc
+      - computer
+      - battle station
+      - pc masterrace
+      - pc steff
+      - steff pc
+    expose: true
+    room: Living Room
   group.all_lights:
     name: all Lights
     aliases:
