--- a/groups/scenes/scenes.yaml
+++ b/groups/scenes/scenes.yaml
@@ -2,11 +2,11 @@ scenes_panel:
   name: Scenes
   control: hidden
   entities:
-    - script.bathroom_heater
     - script.tv_light
     - script.gaming_light
     - script.bed_youtube
     - script.good_night
+    - script.leaving_home
 
 bathroom_heater_control:
   name: Bathroom Heater Control
