tweaked power status sensors

--- a/binary_sensors/rooms/office/3d_printer_power_status.yaml
+++ b/binary_sensors/rooms/office/3d_printer_power_status.yaml
@@ -7,6 +7,6 @@ sensors:
     value_template: >-
       {{ states('sensor.mystrom_server')|float > 200 }}
     delay_on:
-      minutes: 1
+      seconds: 10
     delay_off:
       minutes: 1
