update bayesian filter

--- a/binary_sensors/is_sleeping_bayesian.yaml
+++ b/binary_sensors/is_sleeping_bayesian.yaml
@@ -18,6 +18,11 @@ observations:
     prob_given_false: 1
     platform: 'state'
     to_state: 'off'
+  - entity_id: 'binary_sensor.pixel_battery_charging'
+    prob_given_true: 0.5
+    prob_given_false: 0.8
+    platform: 'state'
+    to_state: 'on'
   - entity_id: 'sun.sun'
     prob_given_true: 0.7
     platform: 'state'
