--- a/groups/views.yaml
+++ b/groups/views.yaml
@@ -10,6 +10,13 @@ rooms:
     - group.outdoor
     #- group.work
 
+apartment:
+  view: yes
+  name: Apartment
+  entities:
+    - group.climate
+    - group.presence
+
 scenes:
   view: yes
   name: Scenes
