--- a/automation/coming_home/home_after_sunset.yaml
+++ b/automation/coming_home/home_after_sunset.yaml
@@ -26,3 +26,8 @@
       data:
         entity_id:
           - light.kitchen_2
+    - delay: 15:00
+    - service: light.turn_off
+      data:
+        entity_id:
+          - light.outdoor_1
