--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -10,6 +10,7 @@ http_password: 00000000000000000000
 ssl_certificate: misc/travis_fullchain.dummy
 ssl_key: misc/travis_key.dummy
 base_url: 00000000000000000000
+proxy_ip: 127.0.0.1
 trusted_ip: 127.0.0.1
 trusted_ip_2: 127.0.0.1
 
