--- a/automation/system/weather_warning.yaml
+++ b/automation/system/weather_warning.yaml
@@ -17,12 +17,9 @@
         entity_id: sensor.netatmo_outdoormodule_temperature
         below: 4
   action:
-    - service: notify.html5
+    - service: notify.hangouts
       data:
         message: "It's below 4°C! Temp: {{ states('sensor.netatmo_outdoormodule_temperature') }}°C"
-        title: "Weather Warning"
-        data:
-          tag: "weather_warning_cold"
 
 - alias: "Weather: Aare Brienzwiler Danger Level 2"
   id: weather_aare_brienzwiler_danger_level_2
@@ -31,12 +28,9 @@
       entity_id: sensor.aare_brienzwiler_danger_level
       above: 1
   action:
-    - service: notify.html5
+    - service: notify.hangouts
       data:
         message: "Aare Brienzwiler Danger Level at {{ states('sensor.aare_brienzwiler_danger_level') }}!"
-        title: "Weather Warning"
-        data:
-          tag: "weather_warning_aare_brienzwiler"
 
 - alias: "Weather: High Windspeeds Brienz"
   id: weather_high_windspeed_brienz
@@ -48,9 +42,6 @@
         minutes: 15
         seconds: 0
   action:
-    - service: notify.html5
+    - service: notify.hangouts
       data:
         message: "Hohe Wingeschwindigkeit! {{ states('sensor.windspeed_brienz') }} m/s / {{ (float(states('sensor.windspeed_brienz')) * 3.6) | round(0) }} km/h!"
-        title: "Weather Warning"
-        data:
-          tag: "weather_warning_wind"
