--- a/binary_sensors/is_sleeping_bayesian.yaml
+++ b/binary_sensors/is_sleeping_bayesian.yaml
@@ -1,25 +1,25 @@
 platform: bayesian
 name: "is sleeping bayesian"
 prior: 0.25
-probability_threshold: 0.95
+probability_threshold: 0.97
 observations:
+  - entity_id: 'device_tracker.steff_phone_pixel'
+    prob_given_true: 0.8
+    prob_given_false: 0.2
+    platform: 'state'
+    to_state: 'home'
   - entity_id: 'binary_sensor.bedroomdoor_state'
-    prob_given_true: 0.7
+    prob_given_true: 0.9
+    prob_given_false: 0.1
     platform: 'state'
     to_state: 'off'
   - entity_id: 'binary_sensor.tv_power_status'
     prob_given_true: 0.8
-    platform: 'state'
-    to_state: 'off'
-  - entity_id: 'light.bedroom_lights'
-    prob_given_true: 0.8
+    prob_given_false: 0.1
     platform: 'state'
     to_state: 'off'
   - entity_id: 'binary_sensor.pixel_battery_charging'
-    prob_given_true: 0.6
+    prob_given_true: 0.8
+    prob_given_false: 0.2
     platform: 'state'
     to_state: 'On'
-  - entity_id: 'sun.sun'
-    prob_given_true: 0.8
-    platform: 'state'
-    to_state: 'below_horizon'
