updates travis secrets

--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -96,3 +96,6 @@ octopi_still_image_url: http://000.000.000:8080/?action=snapshot
 
 # Microsoft TTS
 microsoft_bing_speech_api_key: XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+
+# Google Hangouts Conversations
+hangouts_conversationid_1: XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
